--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body{
     height: 10%;
 }
 .chapter{
-    font-family:cursive;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: brown;
     background-color:rgb(217, 231, 231);
     font-size: medium;
